unpackaged/main/default/objects/Insurance_Rule_Master__c/Insurance_Rule_Master__c.object-meta.xml
<CustomObject>
    <label>Insurance Rule Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Rule Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>