unpackaged/main/default/objects/Insurance_Rule_Master__c/fields/AC_NonAC__c.field-meta.xml
<CustomField>
    <fullName>AC_NonAC__c</fullName>
    <label>AC/Non-AC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Non-Ac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>