unpackaged/main/default/objects/Insurance_Rule_Master__c/fields/Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Applied_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applied Date</label>
    <type>Date</type>
</CustomField>