unpackaged/main/default/objects/Insurance_Rule_Master__c/fields/Depreciation_Years__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Years__c</fullName>
    <label>Insurance Depreciation Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>