unpackaged/main/default/objects/Insurance_Rule_Master__c/fields/Doc_ID__c.field-meta.xml
<CustomField>
    <fullName>Doc_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Doc ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>