unpackaged/main/default/objects/Insurance_Rule_Master__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Rule Master</relationshipLabel>
    <relationshipName>Insurance_Rule_Master</relationshipName>
    <type>Lookup</type>
</CustomField>