unpackaged/main/default/objects/Insurance_Rule_Master__c/fields/Insurance_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Code__c</fullName>
    <formula>Insurance_Company__r.ETVIN_Insurance_Company_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Company Code</label>
    <type>Text</type>
</CustomField>