unpackaged/main/default/objects/Insurance_Rule_Master__c/fields/Insurance_Floor_Value__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Floor_Value__c</fullName>
    <label>Insurance Floor Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>