unpackaged/main/default/objects/Insurance_Rule_Master__c/fields/Insurance_Limit__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Limit__c</fullName>
    <label>Insurance Limit %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>