unpackaged/main/default/objects/Insurance_Rule_Master__c/fields/Total_Loss__c.field-meta.xml
<CustomField>
    <fullName>Total_Loss__c</fullName>
    <label>Total Loss %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>