unpackaged/main/default/objects/Insurance_Rule_Master__c/fields/Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Type_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>